# sfec

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  annotated.html  classes.html  classtui_1_1key__handler-members.html  classtui_1_1key__handler.html  dir_000000_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_875ad2419a211f3869429346f1dea5f1.html  dir_875ad2419a211f3869429346f1dea5f1_dep.map  dir_875ad2419a211f3869429346f1dea5f1_dep.md5  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  install.sh  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_eval.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  namespacetui.html  sfec  sfec:Zone.Identifier  sfec_8cpp.html  sfec_8cpp__incl.map  sfec_8cpp__incl.md5  (+12 more)
.github/workflows/: build.yml
config/: config.conf
docs/: Doxyfile
search/: all_0.js  all_1.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_11.js  enumvalues_12.js  enumvalues_13.js  enumvalues_2.js  enumvalues_3.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  enumvalues_c.js  enumvalues_d.js  enumvalues_e.js  enumvalues_f.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  namespaces_0.js  searchdata.js  variables_0.js  (+1 more)
src/: CMakeLists.txt  main.cpp  sfec.cpp
src/config/: interpreter.cpp  interpreter.h  options.cpp  options.h  parser.cpp  parser.h  rc.conf
src/file/: file.cpp  file.h
src/tui/: tui.cpp  tui.h  tui_widgets.cpp
src/tui/event/: event_handler.cpp  event_handler.h  key_handler.cpp  key_handler.h
src/tui/event/keybinds/: keybinds.cpp  keybinds.h
src/tui/helpers/: style.cpp  style.h
src/tui/render/: color.cpp  color.h  matrix.cpp  matrix.h  render.cpp  render.h
src/tui/utils/: icon.cpp  icon.h  position.cpp  position.h  style.cpp
tests/: test_app.cpp
